# image-editor

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  exposure.cpp  exposure.h  image-editor.pro
.reuse/: dep5
.tx/: config  transifex.yaml
debian/: changelog  control  control.in  copyright  image-editor.1  image-editor6.1  libimage-viewer-dev.install  libimage-viewer.install  libimageeditor-dev.install  libimageeditor.install  libimageeditor.manpages  libimageeditor6-dev.install  libimageeditor6.install  libimageeditor6.manpages  libvisualresult-dev.install  libvisualresult.install  rules
libimage-viewer/: CMakeLists.txt  image-viewer_global.h  imageengine.cpp  imageengine.h  imageviewer.cpp  imageviewer.h
libimage-viewer/service/: commonservice.cpp  commonservice.h  imagedataservice.cpp  imagedataservice.h
libimage-viewer/slideshow/: imageanimation.cpp  imageanimation.h  slideshowpanel.cpp  slideshowpanel.h
libimage-viewer/translations/: libimage-viewer.ts  libimage-viewer_am_ET.ts  libimage-viewer_ar.ts  libimage-viewer_ast.ts  libimage-viewer_bg.ts  libimage-viewer_bo.ts  libimage-viewer_ca.ts  libimage-viewer_cs.ts  libimage-viewer_da.ts  libimage-viewer_de.ts  libimage-viewer_el.ts  libimage-viewer_es.ts  libimage-viewer_et.ts  libimage-viewer_fa.ts  libimage-viewer_fi.ts  libimage-viewer_fr.ts  libimage-viewer_gl_ES.ts  libimage-viewer_he.ts  libimage-viewer_hr.ts  libimage-viewer_hu.ts  libimage-viewer_id.ts  libimage-viewer_it.ts  libimage-viewer_ko.ts  libimage-viewer_lt.ts  libimage-viewer_ms.ts  libimage-viewer_ne.ts  libimage-viewer_nl.ts  libimage-viewer_pl.ts  libimage-viewer_pt.ts  libimage-viewer_pt_BR.ts  libimage-viewer_ru.ts  libimage-viewer_sk.ts  libimage-viewer_sl.ts  libimage-viewer_sq.ts  libimage-viewer_sr.ts  libimage-viewer_sv.ts  libimage-viewer_tr.ts  libimage-viewer_ug.ts  libimage-viewer_uk.ts  libimage-viewer_zh_CN.ts  (+2 more)
libimage-viewer/unionimage/: baseutils.cpp  imageutils.cpp  imgoperate.cpp  pluginbaseutils.cpp  unionimage.cpp
libimage-viewer/viewpanel/: lockwidget.cpp  navigationwidget.cpp  thumbnailwidget.cpp  viewpanel.cpp  viewpanel.h
libimage-viewer/viewpanel/contents/: bottomtoolbar.cpp  bottomtoolbar.h  imageinfowidget.cpp  imageinfowidget.h  imgviewdelegate.h  imgviewlistview.cpp  imgviewlistview.h  imgviewwidget.cpp  imgviewwidget.h
libimage-viewer/viewpanel/scen/: graphicsitem.cpp  imagegraphicsview.cpp  imagegraphicsview.h  imagesvgitem.cpp
libimage-viewer/widgets/: toptoolbar.cpp  toptoolbar.h
libimageviewer/: CMakeLists.txt  image-viewer_global.h  imageengine.cpp  imageengine.h  imageviewer.cpp  imageviewer.h  libimageviewer-qt5.cmake  libimageviewer-qt6.cmake  libimageviewer.cmake  libimageviewer.pc.in  movieservice.cpp  movieservice.h
libimageviewer/quickprint/: printimageloader.cpp  printimageloader.h  quickprint.cpp  quickprint_p.h
libimageviewer/service/: aimodelservice.cpp  aimodelservice.h  aimodelservice_p.h  commonservice.cpp  commonservice.h  configsetter.cpp  ffmpegvideothumbnailer.cpp  gstreamervideothumbnailer.cpp  gstreamervideothumbnailer.h  gsttransplant.h  imagedataservice.cpp  imagedataservice.h  mtpfileproxy.cpp  mtpfileproxy.h  permissionconfig.cpp  permissionconfig.h
libimageviewer/slideshow/: imageanimation.cpp  slideshowpanel.cpp  slideshowpanel.h
libimageviewer/translations/: libimageviewer.ts  libimageviewer_am_ET.ts  libimageviewer_ar.ts  libimageviewer_ast.ts  libimageviewer_az.ts  libimageviewer_bg.ts  libimageviewer_bo.ts  libimageviewer_ca.ts  libimageviewer_cs.ts  libimageviewer_da.ts  libimageviewer_de.ts  libimageviewer_el.ts  libimageviewer_es.ts  libimageviewer_et.ts  libimageviewer_fa.ts  libimageviewer_fi.ts  libimageviewer_fr.ts  libimageviewer_gl_ES.ts  libimageviewer_he.ts  libimageviewer_hr.ts  libimageviewer_hu.ts  libimageviewer_id.ts  libimageviewer_it.ts  libimageviewer_ko.ts  libimageviewer_lt.ts  libimageviewer_ms.ts  libimageviewer_ne.ts  libimageviewer_nl.ts  libimageviewer_pl.ts  libimageviewer_pt.ts  libimageviewer_pt_BR.ts  libimageviewer_ru.ts  libimageviewer_sk.ts  libimageviewer_sl.ts  libimageviewer_sq.ts  libimageviewer_sr.ts  libimageviewer_sv.ts  libimageviewer_tr.ts  libimageviewer_ug.ts  libimageviewer_uk.ts  (+3 more)
libimageviewer/unionimage/: baseutils.cpp  baseutils.h  imageutils.cpp  imageutils.h  imgoperate.cpp  imgoperate.h  pluginbaseutils.cpp  snifferimageformat.cpp  unionimage.cpp  unionimage.h
libimageviewer/viewpanel/: lockwidget.cpp  lockwidget.h  navigationwidget.cpp  thumbnailwidget.cpp  thumbnailwidget.h  viewpanel.cpp  viewpanel.h
libimageviewer/viewpanel/contents/: aienhancefloatwidget.cpp  aienhancefloatwidget.h  bottomtoolbar.cpp  bottomtoolbar.h  imageinfowidget.cpp  imageinfowidget.h  imgviewdelegate.cpp  imgviewlistview.cpp  imgviewlistview.h  imgviewwidget.cpp  imgviewwidget.h
libimageviewer/viewpanel/scen/: graphicsitem.cpp  graphicsitem.h  imagegraphicsview.cpp  imagegraphicsview.h  imagesvgitem.cpp  imagesvgitem.h
libimageviewer/widgets/: abstracttoptoolbar.h  extensionpanel.cpp  extensionpanel.h  imagebutton.cpp  imagebutton.h  printhelper.cpp  printhelper.h  renamedialog.cpp  renamedialog.h  themewidget.cpp  themewidget.h  toptoolbar.cpp  toptoolbar.h
libimagevisualresult/: CMakeLists.txt  libimagevisualresult-qt5.cmake  libimagevisualresult-qt6.cmake  libimagevisualresult.cmake  libimagevisualresult.pc.in
libvisualresult/: CMakeLists.txt  libvisualresult.pc.in
libvisualresult/filter_cube/: bright.CUBE  classic.CUBE  print.CUBE
libvisualresult/src/: exposure.h  lut.cpp  lut.h  main.c  main.cpp  utils.cpp  utils.h  visualresult.cpp  visualresult.h
tests/: CMakeLists.txt  gtestview.cpp  gtestview.h  main.cpp  test-prj-running.sh  test_LibImageGraphicsView.cpp  test_commonservice.cpp  test_exposure.cpp  test_ffmpegvideothumbnailer.cpp  test_imageviewer.cpp  test_imgviewlistview.cpp  test_imgviewwidget.cpp  test_lockwidget.cpp  test_movieservice.cpp  test_ocrinterface.cpp  test_permissionconfig.cpp  test_quickprint.cpp  test_slidershowpanel.cpp  test_thumbnaliWidget.cpp  test_unionimage.cpp  (+1 more)
(+5 files in other folders)
